--- a/src/global.css
+++ b/src/global.css
@@ -22,8 +22,13 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: transparent;
+  box-shadow: 0 0 8px 2px var(--purple-600);
+}
+
 body {
-  background: var(--gray-700);
+  background: var(--gray-600);
   color: var(--gray-300);
   -webkit-font-smoothing: antialiased;
 }
@@ -31,4 +36,10 @@ body {
 body, input, textarea, button {
   font: 400 1rem 'Inter', sans-serif;
   line-height: 140%;
+}
+
+.container {
+  max-width: 46rem;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
