--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 :root {
   --blue-500: #4EA8DE;
   --blue-600: #1E6F9F;
+  --blue-600-opacity: rgba(30, 111, 159, 0.2);
 
   --purple-500: #8284FA;
   --purple-600: #5E60CE;
@@ -14,6 +15,8 @@
   --gray-700: #0D0D0D;
 
   --red-500: #E25858;
+
+  --shadow: 0 2px 8px rgba(0, 0, 0, 0.06);
 }
 
 * {
@@ -24,7 +27,7 @@
 
 *:focus {
   outline: transparent;
-  box-shadow: 0 0 8px 2px var(--purple-600);
+  box-shadow: 0 0 0 2px var(--purple-600);
 }
 
 body {
