--- a/src/global.css
+++ b/src/global.css
@@ -27,7 +27,7 @@
 
 *:focus {
   outline: transparent;
-  box-shadow: 0 0 0 2px var(--purple-600);
+  box-shadow: 0 0 0 2px var(--blue-500);
 }
 
 body {
