--- a/src/components/task.module.css
+++ b/src/components/task.module.css
@@ -14,6 +14,7 @@
   appearance: none;
   height: 1.25rem;
   width: 1.25rem;
+  margin-top: 0.5rem;
   border: 2px solid var(--blue-500);
   border-radius: 100%;
   background: transparent;
@@ -23,10 +24,11 @@
   align-items: center;
 
   transition: background-color 0.2s, border-color 0.2s;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
-.task input[type=checkbox]:hover {
+.task input[type=checkbox]:hover,
+.task input[type=checkbox]:focus {
   background: var(--blue-600-opacity);
   border-color: var(--blue-600);
 }
@@ -36,7 +38,8 @@
   border-color: var(--purple-600);
 }
 
-.task input[type=checkbox]:checked:hover {
+.task input[type=checkbox]:checked:hover,
+.task input[type=checkbox]:checked:focus {
   background: var(--purple-500);
   border-color: var(--purple-500);
 }
@@ -81,7 +84,8 @@
   transition: background-color 0.2s, color 0.2s;
 }
 
-.deleteTaskButton:hover {
+.deleteTaskButton:hover,
+.deleteTaskButton:focus {
   background: var(--gray-400);
   color: var(--red-500);
 }
