--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,1 +1,34 @@
-.tasks {}
+.wrapper {
+  margin: 4rem 0;
+}
+
+.tasksInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.875rem;
+}
+
+.tasksInfo > strong:first-child {
+  color: var(--blue-500);
+}
+
+.tasksInfo > strong:last-child {
+  color: var(--purple-500);
+}
+
+.tasksInfo > strong > span {
+  margin-left: 0.5rem;
+  padding: 0.125rem 0.5rem;
+  background: var(--gray-400);
+  border-radius: 1rem;
+  color: var(--gray-100);
+  font-size: 0.75rem;
+}
+
+.tasks {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+  margin-top: 1.5rem;
+}
