--- a/src/app.module.css
+++ b/src/app.module.css
@@ -26,6 +26,20 @@
   font-size: 0.75rem;
 }
 
+.emptyTasks {
+  margin-top: 1.5rem;
+  padding: 4rem 1.5rem;
+  border-top: 1px solid var(--gray-400);
+  border-radius: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.emptyTasks strong {
+  margin-top: 1rem;
+}
+
 .tasks {
   display: flex;
   flex-direction: column;
